--- a/home.html
+++ b/home.html
@@ -1,1 +1,27 @@
 <h1>hello</h1>
+
+<script>
+async function scrapeGithubRepo(user, repo) {
+    const url = `https://github.com/${user}/${repo}`;
+    
+    try {
+        const response = await fetch(url);
+        const text = await response.text();
+
+      console.log(text)
+
+        // Extract potential file links ending with .html
+        const matches = [...text.matchAll(/href="\/.*?\/.*?\/blob\/.*?\/(.*?\.html)"/g)];
+        const files = matches.map(match => match[1]);
+
+        console.log("✅ Found HTML files:", files);
+        return files;
+    } catch (error) {
+        console.error("❌ Error scraping GitHub:", error);
+    }
+}
+
+scrapeGithubRepo("yourusername", "your-repo");
+
+  
+</script>
