--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@ async function scrapeGithubRepo(user, repo) {
     }
 }
 
-scrapeGithubRepo("yourusername", "your-repo");
+scrapeGithubRepo("TagInOut", "available-installations-bgm");
 
   
 </script>
