--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
 
 <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
+      navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('Service Worker registered'))
         .catch(error => console.log('Service Worker registration failed:', error));
     };
